Use dynamic connection string in design time context factory and add initial migration

--- a/Crystal.TestWebApp/Crystal.TestWebApp.csproj
+++ b/Crystal.TestWebApp/Crystal.TestWebApp.csproj
@@ -2,11 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Crystal.DbProviders\Crystal.DbProviders.csproj" />
     <ProjectReference Include="..\src\Crystal\Crystal.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataAccess\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 
