--- a/Crystal.TestWebApp/appsettings.json
+++ b/Crystal.TestWebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ModelDb": "Server=(localdb)\\mssqllocaldb;Database=AppDbModel;Trusted_Connection=True;"
+  }
 }
