Working List-based shard management with dynamic migrations and route exceptions

--- a/Crystal.TestWebApp/appsettings.json
+++ b/Crystal.TestWebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ModelDb": "Server=(localdb)\\mssqllocaldb;Database=AppDbModel;Trusted_Connection=True;"
+    "ModelDb": "Server=localhost;Database=AppDbModel;Trusted_Connection=True;"
   }
 }
