Move test projects to tests/ folder

--- a/tests/Crystal.IntegrationTests/Crystal.Tests.csproj
+++ b/tests/Crystal.IntegrationTests/Crystal.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Crystal\Crystal.csproj" />
     <ProjectReference Include="..\src\Crystal\Crystal.csproj" />
   </ItemGroup>
 
